--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@master
+        uses: actions/checkout@v3
       - name: Get sample .apk for test purposes
         run: wget https://github.com/appium/appium/raw/1.10/sample-code/apps/ApiDemos-debug.apk
       - name: Upload artifact to Firebase Distribution
